; ModuleID = '/home/carl/AnghaBench/darwin-xnu/libkern/kxld/extr_kxld_sym.c_kxld_sym_get_class_name_from_vtable.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/libkern/kxld/extr_kxld_sym.c_kxld_sym_get_class_name_from_vtable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@KERN_FAILURE = common dso_local global i32 0, align 4
@finish = common dso_local global i32 0, align 4
@KERN_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kxld_sym_get_class_name_from_vtable(%struct.TYPE_5__* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* @KERN_FAILURE, align 4
  store i32 %8, i32* %7, align 4
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %10 = call i32 @check(%struct.TYPE_5__* %9)
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %12 = call i32 @kxld_sym_is_class_vtable(%struct.TYPE_5__* %11)
  %13 = load i32, i32* @finish, align 4
  %14 = load i32, i32* @KERN_FAILURE, align 4
  store i32 %14, i32* %7, align 4
  %15 = call i32 @require_action(i32 %12, i32 %13, i32 %14)
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %17 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i8*, i8** %5, align 8
  %20 = load i32, i32* %6, align 4
  %21 = call i32 @kxld_sym_get_class_name_from_vtable_name(i32 %18, i8* %19, i32 %20)
  store i32 %21, i32* %7, align 4
  %22 = load i32, i32* %7, align 4
  %23 = load i32, i32* @finish, align 4
  %24 = call i32 @require_noerr(i32 %22, i32 %23)
  %25 = load i32, i32* @KERN_SUCCESS, align 4
  store i32 %25, i32* %7, align 4
  br label %26

26:                                               ; preds = %3
  %27 = load i32, i32* %7, align 4
  ret i32 %27
}

declare dso_local i32 @check(%struct.TYPE_5__*) #1

declare dso_local i32 @require_action(i32, i32, i32) #1

declare dso_local i32 @kxld_sym_is_class_vtable(%struct.TYPE_5__*) #1

declare dso_local i32 @kxld_sym_get_class_name_from_vtable_name(i32, i8*, i32) #1

declare dso_local i32 @require_noerr(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
